--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_color"
+        android:background="@color/white"
         android:fitsSystemWindows="true"
         tools:context="ui.home.HomeFragment">
 
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/background_color"
+            android:background="@color/white"
             android:cursorVisible="true"
             android:ellipsize="start"
             android:focusable="false"
@@ -51,7 +51,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/itemRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="100dp"
             android:layout_marginTop="80dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -62,9 +62,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/itemRecyclerView"
             app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
-            android:layout_marginBottom="90dp"
+            android:layout_marginBottom="70dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="150dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -73,7 +73,7 @@
                 android:orientation="horizontal"
                 android:weightSum="2"
                 android:visibility="@{isItemAvailable ? View.VISIBLE : View.GONE}"
-                android:background="@color/background_color">
+                android:background="@color/white">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -113,8 +113,9 @@
 
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/viewPager"
+                        android:visibility="@{isCameraOpen ? View.GONE : View.VISIBLE}"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="0dp"
                         android:layout_weight="1" />
                 </LinearLayout>
 
@@ -123,31 +124,23 @@
                     android:layout_height="match_parent"
                     android:visibility="@{isCameraOpen ? View.VISIBLE : View.GONE}"
                     android:layout_margin="@dimen/_10dp">
+
                     <androidx.camera.view.PreviewView
                         android:id="@+id/preview_view"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        />
+                        android:layout_height="match_parent"/>
                 </LinearLayout>
             </FrameLayout>
-
-
-
-
-
 
         </LinearLayout>
 
 
-        <soup.neumorphism.NeumorphCardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="70dp"
             android:id="@+id/bottom_bar"
-            android:layout_marginBottom="-10dp"
-            android:layout_marginStart="-10dp"
-            android:layout_marginEnd="-10dp"
-            android:layout_marginTop="-10dp"
-
+            app:cardElevation="@dimen/_20dp"
+            android:paddingTop="@dimen/_10dp"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <LinearLayout
@@ -156,63 +149,54 @@
                 android:weightSum="5"
                 android:orientation="horizontal">
 
-                <soup.neumorphism.NeumorphCardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
+                    app:cardCornerRadius="@dimen/_10dp"
+                    app:cardUseCompatPadding="true"
                     android:id="@+id/btnBarcode"
-                    android:layout_marginTop="-5dp"
-                    android:layout_marginBottom="-5dp"
-                    android:layout_marginStart="-10dp"
-                    android:layout_marginEnd="-5dp"
                     android:textStyle="bold"
                     android:textColor="@color/text_color_heading"
-                    android:gravity="center"
-                    app:neumorph_shadowColorLight="@color/nuemph_shadow_light"
-                    app:neumorph_shadowColorDark="@color/nuemph_shadow_dark">
+                    android:gravity="center">
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:padding="15dp"
-                        android:src="@drawable/ic_delete" />
-                </soup.neumorphism.NeumorphCardView>
+                        android:src="@drawable/barcode" />
+                </androidx.cardview.widget.CardView>
 
-                <soup.neumorphism.NeumorphCardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:id="@+id/btnSavedOrder"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
-                    android:textStyle="bold"
-                    android:layout_marginTop="-5dp"
-                    android:layout_marginBottom="-5dp"
-                    android:layout_marginStart="-5dp"
-                    android:layout_marginEnd="-10dp"
-                    android:textColor="@color/text_color_heading"
-                    app:neumorph_shadowColorLight="@color/nuemph_shadow_light"
-                    app:neumorph_shadowColorDark="@color/nuemph_shadow_dark">
+                    app:cardCornerRadius="@dimen/_10dp"
+                    app:cardUseCompatPadding="true"
+                    android:textColor="@color/text_color_heading">
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:padding="15dp"
-                        android:src="@drawable/ic_delete">
+                        android:src="@drawable/saveorder">
 
                     </ImageView>
 
-                </soup.neumorphism.NeumorphCardView>
+                </androidx.cardview.widget.CardView>
 
-                <soup.neumorphism.NeumorphCardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:id="@+id/btnGenerateBill"
                     android:layout_height="match_parent"
+                    app:cardCornerRadius="@dimen/_10dp"
+                    app:cardUseCompatPadding="true"
                     android:textStyle="bold"
                     android:layout_weight="1"
+                    app:cardBackgroundColor="@color/colorPrimaryDark"
                     android:textColor="@color/text_color_heading"
-                    app:neumorph_backgroundColor="@color/colorPrimaryDark"
-                    android:gravity="center"
-                    app:neumorph_shadowColorLight="@color/nuemph_shadow_light"
-                    app:neumorph_shadowColorDark="@color/nuemph_shadow_dark">
+                    android:gravity="center">
 
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -226,6 +210,7 @@
                             android:layout_gravity="center|right"
                             android:textSize="15sp"
                             android:id="@+id/txtBill"
+                            android:textColor="@color/text_color_heading_reverse"
                             android:layout_marginEnd="20dp"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -239,24 +224,25 @@
                             android:layout_gravity="center|right"
                             android:textSize="35sp"
                             android:textStyle="bold"
+                            android:textColor="@color/text_color_heading_reverse"
                             android:id="@+id/tvBill"
                             android:layout_marginStart="20dp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@id/txtBill"
+                            tools:text="0.0"
                             />
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-                </soup.neumorphism.NeumorphCardView>
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
-
-        </soup.neumorphism.NeumorphCardView>
+        </androidx.cardview.widget.CardView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
