--- a/app/src/main/res/layout/fragment_sale.xml
+++ b/app/src/main/res/layout/fragment_sale.xml
@@ -20,6 +20,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/recyclerView"
+                    tools:listitem="@layout/item_product_home"
                     android:layout_marginTop="10dp" />
 
 
