--- a/app/src/main/res/layout/fragment_sale_return.xml
+++ b/app/src/main/res/layout/fragment_sale_return.xml
@@ -29,10 +29,11 @@
 
     </data>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:scrollbars="none">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -42,6 +43,9 @@
                 android:layout_height="wrap_content"
                 app:cardUseCompatPadding="true"
                 app:cardElevation="6dp"
+                android:id="@+id/cardHeaderView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:cardCornerRadius="8dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -160,14 +164,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/recyclerView"
-                android:nestedScrollingEnabled="false"
-                app:layout_constraintTop_toBottomOf="@+id/view"
+                app:layout_constraintTop_toBottomOf="@+id/cardHeaderView"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:listitem="@layout/item_sale_return"
-                tools:itemCount="1" />
+                tools:itemCount="0" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:id="@+id/bottomView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                 android:layout_marginTop="@dimen/_10dp">
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -408,11 +415,9 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-        </LinearLayout>
-
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 
 </layout>
