--- a/app/src/main/res/layout/item_category_home.xml
+++ b/app/src/main/res/layout/item_category_home.xml
@@ -7,36 +7,30 @@
 
         <variable
             name="category"
-            type="com.kreativesquadz.billkit.model.Category" /> <!-- Replace "your.package.name" with your actual package name -->
+            type="com.kreativesquadz.billkit.model.Category" />
 
+        <variable
+            name="isSelected"
+            type="Boolean" />
     </data>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_margin="8dp"
         app:cardCornerRadius="30dp"
-        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardBackgroundColorSelected="@{isSelected}"
         app:cardElevation="2dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <!-- Customer Name -->
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="@{category.categoryName}"
-                android:textSize="16sp"
+                android:textSize="@dimen/txt_18sp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                app:isSelected="@{isSelected}"
                 android:textStyle="bold"
                 android:maxLength="3"
-                android:paddingBottom="4dp"
                 tools:text="DEMO" />
-
-
-        </LinearLayout>
     </androidx.cardview.widget.CardView>
 </layout>
