--- a/app/src/main/res/layout/item_invoice_details_bill.xml
+++ b/app/src/main/res/layout/item_invoice_details_bill.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <import type="android.widget.TextView" />
         <import type="com.kreativesquadz.billkit.adapter.BindingAdaptersKt" />
@@ -9,35 +10,106 @@
             type="com.kreativesquadz.billkit.model.InvoiceItem" />
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="2"
-        android:orientation="horizontal">
+        android:id="@+id/cardHeader"
+        android:paddingBottom="@dimen/_5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/itemNameAmountQty"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textStyle="bold"
-            android:textColor="@color/text_color_main"
-            android:layout_marginStart="10dp"
-            android:textSize="@dimen/txt_home_item"
-            android:text="@{item.itemName}"
-            tools:text="2000"/>
 
-        <TextView
-            android:id="@+id/itemTotalAmount"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textStyle="bold"
-            android:textColor="@color/text_color_main"
-            android:textSize="@dimen/txt_home_item"
-            android:gravity="end"
-            android:layout_marginEnd="10dp"
-            android:text="@{item.totalPrice}"
-            tools:text="2000"/>
-    </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/_10dp"
+            android:layout_marginEnd="@dimen/_10dp">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/quantity"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_color_main"
+                android:textSize="@dimen/txt_18sp"
+                android:layout_marginEnd="@dimen/_10dp"
+                android:layout_marginTop="@dimen/_5dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text='@{item.quantity +" x "}'
+                tools:text="300 x "/>
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvItemName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_color_main"
+                android:textSize="@dimen/txt_16sp"
+                android:layout_marginStart="@dimen/_15dp"
+                android:layout_marginTop="@dimen/_5dp"
+                app:layout_constraintStart_toEndOf="@+id/quantity"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text='@{(item.itemName.split(" ")[0])}'
+                android:textStyle="bold"
+                tools:text="Itemmmm"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/txtPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/text_color_main"
+                android:textSize="@dimen/txt_18sp"
+                android:layout_marginTop="@dimen/_5dp"
+                app:layout_constraintStart_toStartOf="@+id/tvItemName"
+                app:layout_constraintTop_toBottomOf="@+id/tvItemName"
+                android:text="@{item.unitPrice}"
+                tools:text="450"/>
+
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvAvailableQty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_10dp"
+                android:layout_marginTop="@dimen/_5dp"
+                android:textColor="@color/text_color_main"
+                android:textSize="@dimen/txt_18sp"
+                android:text="@{item.totalPrice}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="3000" />
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvTotal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_color_main"
+                android:textSize="@dimen/txt_14sp"
+                android:layout_marginTop="@dimen/_5dp"
+                android:layout_marginEnd="@dimen/_10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvAvailableQty"
+                android:text='@{item.taxRate+"%"}'
+                tools:text="0.0%"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:id="@+id/lineView"
+                android:layout_marginTop="@dimen/_10dp"
+                android:layout_marginBottom="@dimen/_5dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvTotal"
+                android:background="@color/lite_grey_200"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
