--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,11 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
+    <color name="main_color">#0B5E8C</color>
 
 
     <color name="text_color_primary">#97959c</color>
-    <color name="colorPrimaryDark">#97959c</color>
-    <color name="colorPrimary">#97959c</color>
+    <color name="colorPrimaryDark">#0B5E8C</color>
+    <color name="colorPrimary">#0B5E8C</color>
     <color name="background_color_lite">#b0a5ab</color>
 
     <color name="nuemph_shadow_dark">#96B6C5</color>
